# cube

./: CMakeLists.txt
lib/cube/include/CUBE/: gl_error.h
src/: gl_error.c  main.c
